--- a/ES6/09-Promise.html
+++ b/ES6/09-Promise.html
@@ -88,7 +88,7 @@
         // 新版 jquery的ajax已经有Promise
         {
             Promise.all([
-                cun$.ajax({
+                $.ajax({
                     type: "GET",
                     url: "https://tcc.taobao.com/cc/json/mobile_tel_segment.htm",
                     data: {
