--- a/Vue/Vue项目/travel/public/index.html
+++ b/Vue/Vue项目/travel/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -8,12 +9,15 @@
     <title>travel</title>
     <!-- icon 图标 -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1854237_y5a43cdrdac.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>
-      <strong>We're sorry but travel doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're sorry but travel doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
